编译原理/lab2_simple/parser.output
Terminals which are not used

   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   AUTOADD_L
   AUTOADD_R
   AUTOSUB_L
   AUTOSUB_R
   ARRAY_DEF
   ARRAY_DEC
   ARRAY


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ArrayDec SEMI
    6       | Specifier FuncDec CompSt
    7       | error SEMI

    8 Specifier: TYPE

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 VarDec: ID

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP
   14        | error RP

   15 ArrayDec: ID LB Exp RB
   16         | ID LB RB
   17         | error RB

   18 VarList: ParamDec
   19        | ParamDec COMMA VarList

   20 ParamDec: Specifier VarDec

   21 CompSt: LC DefList StmList RC
   22       | error RC

   23 StmList: /* empty */
   24        | Stmt StmList

   25 Stmt: Exp SEMI
   26     | CompSt
   27     | RETURN Exp SEMI
   28     | IF LP Exp RP Stmt
   29     | IF LP Exp RP Stmt ELSE Stmt
   30     | WHILE LP Exp RP Stmt
   31     | FOR LP Exp RP Stmt

   32 DefList: /* empty */
   33        | Def DefList

   34 Def: Specifier DecList SEMI
   35    | Specifier ArrayDec SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNOP Exp

   40 Exp: Exp ASSIGNOP Exp
   41    | Exp AND Exp
   42    | Exp OR Exp
   43    | Exp RELOP Exp
   44    | Exp PLUS Exp
   45    | Exp MINUS Exp
   46    | Exp STAR Exp
   47    | Exp DIV Exp
   48    | Exp COMADD Exp
   49    | Exp COMSUB Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | AUTOADD Exp
   54    | AUTOSUB Exp
   55    | Exp AUTOADD
   56    | Exp AUTOSUB
   57    | ID LP Args RP
   58    | ID LP RP
   59    | ID
   60    | INT
   61    | FLOAT
   62    | CHAR

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 17 22
INT (258) 60
ID (259) 11 12 13 15 16 57 58 59
RELOP (260) 43
TYPE (261) 8
FLOAT (262) 61
CHAR (263) 62
LP (264) 12 13 28 29 30 31 50 57 58
RP (265) 12 13 14 28 29 30 31 50 57 58
LC (266) 21
RC (267) 21 22
SEMI (268) 4 5 7 25 27 34 35
COMMA (269) 10 19 37 63
LB (270) 15 16
RB (271) 15 16 17
PLUS (272) 44
MINUS (273) 45 51
STAR (274) 46
DIV (275) 47
ASSIGNOP (276) 39 40
AND (277) 41
OR (278) 42
NOT (279) 52
IF (280) 28 29
ELSE (281) 29
WHILE (282) 30
RETURN (283) 27
COMADD (284) 48
COMSUB (285) 49
FOR (286) 31
EXT_DEF_LIST (287)
EXT_VAR_DEF (288)
FUNC_DEF (289)
FUNC_DEC (290)
EXT_DEC_LIST (291)
PARAM_LIST (292)
PARAM_DEC (293)
VAR_DEF (294)
DEC_LIST (295)
DEF_LIST (296)
COMP_STM (297)
STM_LIST (298)
EXP_STMT (299)
IF_THEN (300)
IF_THEN_ELSE (301)
FUNC_CALL (302)
ARGS (303)
FUNCTION (304)
PARAM (305)
ARG (306)
CALL (307)
LABEL (308)
GOTO (309)
JLT (310)
JLE (311)
JGT (312)
JGE (313)
EQ (314)
NEQ (315)
AUTOADD_L (316)
AUTOADD_R (317)
AUTOSUB_L (318)
AUTOSUB_R (319)
ARRAY_DEF (320)
ARRAY_DEC (321)
ARRAY (322)
AUTOSUB (323) 54 56
AUTOADD (324) 53 55
UMINUS (325)
LOWER_THEN_ELSE (326)


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
program (73)
    on left: 1, on right: 0
ExtDefList (74)
    on left: 2 3, on right: 1 3
ExtDef (75)
    on left: 4 5 6 7, on right: 3
Specifier (76)
    on left: 8, on right: 4 5 6 20 34 35
ExtDecList (77)
    on left: 9 10, on right: 4 10
VarDec (78)
    on left: 11, on right: 9 10 20 38 39
FuncDec (79)
    on left: 12 13 14, on right: 6
ArrayDec (80)
    on left: 15 16 17, on right: 5 35
VarList (81)
    on left: 18 19, on right: 12 19
ParamDec (82)
    on left: 20, on right: 18 19
CompSt (83)
    on left: 21 22, on right: 6 26
StmList (84)
    on left: 23 24, on right: 21 24
Stmt (85)
    on left: 25 26 27 28 29 30 31, on right: 24 28 29 30 31
DefList (86)
    on left: 32 33, on right: 21 33
Def (87)
    on left: 34 35, on right: 33
DecList (88)
    on left: 36 37, on right: 34 37
Dec (89)
    on left: 38 39, on right: 36 37
Exp (90)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62, on right: 15 25 27 28 29 30 31 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 63 64
Args (91)
    on left: 63 64, on right: 57 63


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ArrayDec SEMI
    6       | Specifier . FuncDec CompSt

    error  shift, and go to state 10
    ID     shift, and go to state 11

    ExtDecList  go to state 12
    VarDec      go to state 13
    FuncDec     go to state 14
    ArrayDec    go to state 15


state 7

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   14 FuncDec: error . RP
   17 ArrayDec: error . RB

    RP  shift, and go to state 16
    RB  shift, and go to state 17


state 11

   11 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP
   15 ArrayDec: ID . LB Exp RB
   16         | ID . LB RB

    LP  shift, and go to state 18
    LB  shift, and go to state 19

    $default  reduce using rule 11 (VarDec)


state 12

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


state 13

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 21

    $default  reduce using rule 9 (ExtDecList)


state 14

    6 ExtDef: Specifier FuncDec . CompSt

    error  shift, and go to state 22
    LC     shift, and go to state 23

    CompSt  go to state 24


state 15

    5 ExtDef: Specifier ArrayDec . SEMI

    SEMI  shift, and go to state 25


state 16

   14 FuncDec: error RP .

    $default  reduce using rule 14 (FuncDec)


state 17

   17 ArrayDec: error RB .

    $default  reduce using rule 17 (ArrayDec)


state 18

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 26

    Specifier  go to state 27
    VarList    go to state 28
    ParamDec   go to state 29


state 19

   15 ArrayDec: ID LB . Exp RB
   16         | ID LB . RB

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    RB       shift, and go to state 35
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 40


state 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 21

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 13


state 22

   22 CompSt: error . RC

    RC  shift, and go to state 43


state 23

   21 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 32 (DefList)

    Specifier  go to state 44
    DefList    go to state 45
    Def        go to state 46


state 24

    6 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 25

    5 ExtDef: Specifier ArrayDec SEMI .

    $default  reduce using rule 5 (ExtDef)


state 26

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 27

   20 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 47


state 28

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 48


state 29

   18 VarList: ParamDec .
   19        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 49

    $default  reduce using rule 18 (VarList)


state 30

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


state 31

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 50

    $default  reduce using rule 59 (Exp)


state 32

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


state 33

   62 Exp: CHAR .

    $default  reduce using rule 62 (Exp)


state 34

   50 Exp: LP . Exp RP

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 51


state 35

   16 ArrayDec: ID LB RB .

    $default  reduce using rule 16 (ArrayDec)


state 36

   51 Exp: MINUS . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 52


state 37

   52 Exp: NOT . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 53


state 38

   54 Exp: AUTOSUB . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 54


state 39

   53 Exp: AUTOADD . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 55


state 40

   15 ArrayDec: ID LB Exp . RB
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    RELOP     shift, and go to state 56
    RB        shift, and go to state 57
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    ASSIGNOP  shift, and go to state 62
    AND       shift, and go to state 63
    OR        shift, and go to state 64
    COMADD    shift, and go to state 65
    COMSUB    shift, and go to state 66
    AUTOSUB   shift, and go to state 67
    AUTOADD   shift, and go to state 68


state 41

   11 VarDec: ID .

    $default  reduce using rule 11 (VarDec)


state 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 43

   22 CompSt: error RC .

    $default  reduce using rule 22 (CompSt)


state 44

   34 Def: Specifier . DecList SEMI
   35    | Specifier . ArrayDec SEMI

    error  shift, and go to state 69
    ID     shift, and go to state 70

    VarDec    go to state 71
    ArrayDec  go to state 72
    DecList   go to state 73
    Dec       go to state 74


state 45

   21 CompSt: LC DefList . StmList RC

    error    shift, and go to state 22
    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    LC       shift, and go to state 23
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    IF       shift, and go to state 75
    WHILE    shift, and go to state 76
    RETURN   shift, and go to state 77
    FOR      shift, and go to state 78
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    RC  reduce using rule 23 (StmList)

    CompSt   go to state 79
    StmList  go to state 80
    Stmt     go to state 81
    Exp      go to state 82


state 46

   33 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 32 (DefList)

    Specifier  go to state 44
    DefList    go to state 83
    Def        go to state 46


state 47

   20 ParamDec: Specifier VarDec .

    $default  reduce using rule 20 (ParamDec)


state 48

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 49

   19 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 27
    VarList    go to state 84
    ParamDec   go to state 29


state 50

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    RP       shift, and go to state 85
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp   go to state 86
    Args  go to state 87


state 51

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   50    | LP Exp . RP
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    RELOP     shift, and go to state 56
    RP        shift, and go to state 88
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    ASSIGNOP  shift, and go to state 62
    AND       shift, and go to state 63
    OR        shift, and go to state 64
    COMADD    shift, and go to state 65
    COMSUB    shift, and go to state 66
    AUTOSUB   shift, and go to state 67
    AUTOADD   shift, and go to state 68


state 52

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   51    | MINUS Exp .
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 51 (Exp)


state 53

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   52    | NOT Exp .
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 52 (Exp)


state 54

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   54    | AUTOSUB Exp .
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 54 (Exp)


state 55

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   53    | AUTOADD Exp .
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 53 (Exp)


state 56

   43 Exp: Exp RELOP . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 89


state 57

   15 ArrayDec: ID LB Exp RB .

    $default  reduce using rule 15 (ArrayDec)


state 58

   44 Exp: Exp PLUS . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 90


state 59

   45 Exp: Exp MINUS . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 91


state 60

   46 Exp: Exp STAR . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 92


state 61

   47 Exp: Exp DIV . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 93


state 62

   40 Exp: Exp ASSIGNOP . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 94


state 63

   41 Exp: Exp AND . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 95


state 64

   42 Exp: Exp OR . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 96


state 65

   48 Exp: Exp COMADD . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 97


state 66

   49 Exp: Exp COMSUB . Exp

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 98


state 67

   56 Exp: Exp AUTOSUB .

    $default  reduce using rule 56 (Exp)


state 68

   55 Exp: Exp AUTOADD .

    $default  reduce using rule 55 (Exp)


state 69

   17 ArrayDec: error . RB

    RB  shift, and go to state 17


state 70

   11 VarDec: ID .
   15 ArrayDec: ID . LB Exp RB
   16         | ID . LB RB

    LB  shift, and go to state 19

    $default  reduce using rule 11 (VarDec)


state 71

   38 Dec: VarDec .
   39    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 99

    $default  reduce using rule 38 (Dec)


state 72

   35 Def: Specifier ArrayDec . SEMI

    SEMI  shift, and go to state 100


state 73

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 101


state 74

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 102

    $default  reduce using rule 36 (DecList)


state 75

   28 Stmt: IF . LP Exp RP Stmt
   29     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 103


state 76

   30 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 104


state 77

   27 Stmt: RETURN . Exp SEMI

    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    Exp  go to state 105


state 78

   31 Stmt: FOR . LP Exp RP Stmt

    LP  shift, and go to state 106


state 79

   26 Stmt: CompSt .

    $default  reduce using rule 26 (Stmt)


state 80

   21 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 107


state 81

   24 StmList: Stmt . StmList

    error    shift, and go to state 22
    INT      shift, and go to state 30
    ID       shift, and go to state 31
    FLOAT    shift, and go to state 32
    CHAR     shift, and go to state 33
    LP       shift, and go to state 34
    LC       shift, and go to state 23
    MINUS    shift, and go to state 36
    NOT      shift, and go to state 37
    IF       shift, and go to state 75
    WHILE    shift, and go to state 76
    RETURN   shift, and go to state 77
    FOR      shift, and go to state 78
    AUTOSUB  shift, and go to state 38
    AUTOADD  shift, and go to state 39

    RC  reduce using rule 23 (StmList)

    CompSt   go to state 79
    StmList  go to state 108
    Stmt     go to state 81
    Exp      go to state 82


state 82

   25 Stmt: Exp . SEMI
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    RELOP     shift, and go to state 56
    SEMI      shift, and go to state 109
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    ASSIGNOP  shift, and go to state 62
    AND       shift, and go to state 63
    OR        shift, and go to state 64
    COMADD    shift, and go to state 65
    COMSUB    shift, and go to state 66
    AUTOSUB   shift, and go to state 67
    AUTOADD   shift, and go to state 68


state 83

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


state 84

   19 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 19 (VarList)


state 85

   58 Exp: ID LP RP .

    $default  reduce using rule 58 (Exp)


state 86

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB
   63 Args: Exp . COMMA Args
   64     | Exp .

    RELOP     shift, and go to state 56
    COMMA     shift, and go to state 110
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    ASSIGNOP  shift, and go to state 62
    AND       shift, and go to state 63
    OR        shift, and go to state 64
    COMADD    shift, and go to state 65
    COMSUB    shift, and go to state 66
    AUTOSUB   shift, and go to state 67
    AUTOADD   shift, and go to state 68

    $default  reduce using rule 64 (Args)


state 87

   57 Exp: ID LP Args . RP

    RP  shift, and go to state 111


state 88

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


state 89

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   43    | Exp RELOP Exp .
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    PLUS     shift, and go to state 58
    MINUS    shift, and go to state 59
    STAR     shift, and go to state 60
    DIV      shift, and go to state 61
    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 43 (Exp)


state 90

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   44    | Exp PLUS Exp .
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    STAR     shift, and go to state 60
    DIV      shift, and go to state 61
    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 44 (Exp)


state 91

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   45    | Exp MINUS Exp .
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    STAR     shift, and go to state 60
    DIV      shift, and go to state 61
    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 45 (Exp)


state 92

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   46    | Exp STAR Exp .
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 46 (Exp)


state 93

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   47    | Exp DIV Exp .
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 47 (Exp)


state 94

   40 Exp: Exp . ASSIGNOP Exp
   40    | Exp ASSIGNOP Exp .
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB

    RELOP    shift, and go to state 56
    PLUS     shift, and go to state 58
    MINUS    shift, and go to state 59
    STAR     shift, and go to state 60
    DIV      shift, and go to state 61
    AND      shift, and go to state 63
    OR       shift, and go to state 64
    AUTOSUB  shift, and go to state 67
    AUTOADD  shift, and go to state 68

    $default  reduce using rule 40 (Exp)


state 95

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   41    | Exp AND Exp .
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | Exp . COMADD Exp
   49    | Exp . COMSUB Exp
   55    | Exp . AUTOADD
   56    | Exp . AUTOSUB
